task: prepare for upgrade

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,47 +1,1 @@
-<div fxLayout="column" id="mainLayout">
-
-  <mat-toolbar color="primary">
-    <mat-toolbar-row>
-      <button mat-icon-button (click)="drawer.toggle()">
-        <mat-icon>menu</mat-icon>
-      </button>
-      <span fxFlex="1 1 auto"></span>
-      Mood Outfitters
-      <span fxFlex="1 1 auto"></span>
-      <button mat-flat-button color="primary" [matMenuTriggerFor]="menu">
-        Naira - &#8358;
-        <mat-icon>arrow_downward</mat-icon>
-      </button>
-      <mat-menu #menu="matMenu">
-        <button mat-menu-item>Naira - &#8358;</button>
-        <button mat-menu-item>Pounds - &#163;</button>
-      </mat-menu>
-        <mat-icon matBadge="23" matBadgePosition="after" matBadgeColor="accent" matBadgeSize="small">
-          shopping_cart
-        </mat-icon>
-
-    </mat-toolbar-row>
-  </mat-toolbar>
-
-  <mat-sidenav-container>
-    <mat-sidenav #drawer fxLayout="column" mode="over" >
-      <div></div>
-      <button mat-button>Shop all</button>
-      <button mat-button>Collections</button>
-      <button mat-button>Shipping & delivery</button>
-      <button mat-button>About Us</button>
-      <button mat-button>Contact Us</button>
-      <button mat-button>Wholesale</button>
-    </mat-sidenav>
-    <mat-sidenav-content fxLayout="column" fxLayoutGap="25px">
-
-      <app-carousel></app-carousel>
-
-      <app-items-list></app-items-list>
-
-      <app-footer></app-footer>
-    </mat-sidenav-content>
-  </mat-sidenav-container>
-
-
-</div>
+<app-layout></app-layout>
