--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -1,1 +1,2 @@
-<div id="carousel" [style.background-image]="'url('+ image +')'"><div>
+<!--<div id="carousel" [style.background-image]="'url('+ image +')'">--><div id="carousel">
+<div>
