--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,27 @@
-<p>footer works!</p>
+<hr>
+<div fxLayout.xs="column" fxLayout.gt-xs="row">
+
+  <div class="card" fxFlex.gt-xs="33.3%" fxLayout="column" fxLayoutGap="15px">
+    <span>CUSTOMER CARE</span>
+    <div class="body" fxLayout="column" fxLayoutGap="10px">
+      <span class="link" routerLink="./shipping">Shipping & Delivery</span>
+      <span class="link" routerLink="./contact-us">Contact us</span>
+    </div>
+  </div>
+
+  <div class="card" fxFlex.gt-xs="33.3%" fxLayout="column" fxLayoutGap="15px">
+    <span>TERMS & INFO</span>
+    <div class="body" fxLayout="column" fxLayoutGap="10px">
+      <span class="link" routerLink="wholesale">Wholesale</span>
+      <span class="link" routerLink="returns">Returns</span>
+    </div>
+  </div>
+
+  <div class="card" fxFlex.gt-xs="33.3%" fxLayout="column" fxLayoutGap="15px">
+    <span>MOOD OUTFITTERS</span>
+    <div class="body">
+      Moodoutfitters provides top quality wears that match...
+    </div>
+  </div>
+
+</div>
