--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -7,13 +7,13 @@
       &#8358;0.00
     </mat-card-subtitle>
   </mat-card-header>
-  <img src="..." matCardImage>
+  <img src="../assets/img/01.jpg" matCardImage>
   <mat-card-actions>
-    <button mat-flat-button color="primary">
+    <button mat-button>
       Buy
     </button>
     <span fxFlex="1 1 auto"></span>
-    <button mat-flat-button color="primary">
+    <button mat-button>
       <mat-icon>add_shopping_cart</mat-icon>
       Add to cart
     </button>
