--- a/src/app/components/items-list/items-list.component.html
+++ b/src/app/components/items-list/items-list.component.html
@@ -1,4 +1,9 @@
 <div fxLayout="row wrap" fxLayoutGap="25px grid">
-  <app-item fxFlex.xs="100%" fxFlex.sm="50%" fxFlex.md="33%" fxFlex.gt-md="25%" *ngFor="let i of [1, 2, 3, 4, 5, 1, 2, 3, 4, 5, 1, 2, 3, 4, 5]" [item]=""></app-item>
+  <app-item fxFlex.xs="100%"
+  fxFlex.sm="50%"
+  fxFlex.md="33%"
+  fxFlex.gt-md="25%"
+  *ngFor="let i of ['../assets/img/01.jpg', '02.jpg', '03.jpg', '04.jpg'] as image"
+  [img]=i></app-item>
 </div>
 
