--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,30 +1,22 @@
 <div id="main" fxLayout="row" fxLayoutAlign="center center">
-  <mat-card class="mat-elevation-z5">
+
+  <mat-card class="mat-elevation-z5" style="width: 100%">
+
     <mat-card-header>
-      <mat-card-title>
-        Contact Us
-      </mat-card-title>
-      <mat-card-subtitle>
-
-      </mat-card-subtitle>
+      <mat-card-title>Contact us</mat-card-title>
+      <mat-card-subtitle>Please fill the form and click the submit button</mat-card-subtitle>
     </mat-card-header>
+
     <mat-card-content [formGroup]="contactForm" fxLayout="column">
-      <div fxLayout.xs="column" fxLayout.gt-xs="row" fxLayoutGap="30px">
 
-        <mat-form-field appearance="outline" fxFlex.gt-xs="50%">
-          <mat-label>First name</mat-label>
-          <input matInput formControlName="firstName">
-        </mat-form-field>
-
-        <mat-form-field appearance="outline" fxFlex.gt-xs="50%">
-          <mat-label>Last name</mat-label>
-          <input matInput formControlName="lastName">
-        </mat-form-field>
-      </div>
+      <mat-form-field appearance="outline">
+        <mat-label>Full name</mat-label>
+        <input matInput formControlName="name">
+      </mat-form-field>
 
       <mat-form-field appearance="outline">
         <mat-label>Email</mat-label>
-        <input matInput formControlName="email">
+        <input matInput formControlName="EmailAddress">
       </mat-form-field>
 
       <mat-form-field appearance="outline">
@@ -33,24 +25,22 @@
       </mat-form-field>
 
       <mat-form-field appearance="outline">
-        <mat-label>Title</mat-label>
-        <input matInput formControlName="title">
+        <mat-label>Subject</mat-label>
+        <input matInput formControlName="Subject">
       </mat-form-field>
 
       <mat-form-field appearance="outline">
-        <mat-label>Message</mat-label>
-        <textarea rows="6" matInput formControlName="body"></textarea>
+        <mat-label>Body</mat-label>
+        <textarea rows="6" matInput formControlName="Body"></textarea>
       </mat-form-field>
 
-      <mat-card-footer>
-        Please blah blah
-      </mat-card-footer>
     </mat-card-content>
 
     <mat-card-actions align="end">
-      <button mat-button>
+      <button mat-button (click)="submit()" [disabled]="contactForm.invalid">
         Submit
       </button>
     </mat-card-actions>
   </mat-card>
+
 </div>
