--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -1,13 +1,14 @@
 <mat-card>
   <mat-card-header>
     <mat-card-title>
-      Item description
+      {{data.name}}
     </mat-card-title>
     <mat-card-subtitle>
-      &#8358;0.00
+      <span>&#8358;{{data.prices.ngn | number}}</span>
+      <span *ngIf="null">&#163;</span>
     </mat-card-subtitle>
   </mat-card-header>
-  <img src="../assets/img/01.jpg" matCardImage>
+  <img src="{{data.image}}" matCardImage>
   <mat-card-actions>
     <button mat-button>
       Buy
