--- a/src/app/components/items-list/items-list.component.html
+++ b/src/app/components/items-list/items-list.component.html
@@ -1,9 +1,20 @@
-<div fxLayout="row wrap" fxLayoutGap="25px grid">
+<!--<div fxLayout="row wrap" fxLayoutGap="25px grid">
   <app-item fxFlex.xs="100%"
   fxFlex.sm="50%"
   fxFlex.md="33%"
   fxFlex.gt-md="25%"
-  *ngFor="let i of ['../assets/img/01.jpg', '02.jpg', '03.jpg', '04.jpg'] as image"
+  *ngFor="let i of ['../assets/img/01.jpg', '../assets/img/02.jpg', '../assets/img/03.jpg', '../assets/img/04.jpg', '../assets/img/04.jpg', '../assets/img/04.jpg', '../assets/img/04.jpg'] as image"
   [img]=i></app-item>
+</div>-->
+
+<div fxLayout="row wrap" fxLayoutGap="25px grid">
+  <div *ngFor="let item of items$ | async">
+
+  </div>
+  <app-item fxFlex.xs="100%"
+  fxFlex.sm="50%"
+  fxFlex.md="33%"
+  fxFlex.gt-md="25%"
+  *ngFor="let item of items$ | async" [data]="item"></app-item>
 </div>
 
