--- a/src/app/components/returns/returns.component.html
+++ b/src/app/components/returns/returns.component.html
@@ -1,6 +1,2 @@
-<p>returns works!</p>
-{{num()}}
-<button (click)="increase()">Increase</button>
-{{num2()}}
-<p></p>
-{{nums()}}
+<br>
+For more information about our return policies, please contact <a routerLink="./contact">info@moodoutfitters.com</a>
