--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,46 +1,5 @@
 <div id="main" fxLayout="row" fxLayoutAlign="center center">
 
-  <mat-card class="mat-elevation-z5" style="width: 100%">
-
-    <mat-card-header>
-      <mat-card-title>Contact us</mat-card-title>
-      <mat-card-subtitle>Please fill the form and click the submit button</mat-card-subtitle>
-    </mat-card-header>
-
-    <mat-card-content [formGroup]="contactForm" fxLayout="column">
-
-      <mat-form-field appearance="outline">
-        <mat-label>Full name</mat-label>
-        <input matInput formControlName="name">
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Email</mat-label>
-        <input matInput formControlName="EmailAddress">
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Order ID (if applicable)</mat-label>
-        <input matInput formControlName="orderId">
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Subject</mat-label>
-        <input matInput formControlName="Subject">
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Body</mat-label>
-        <textarea rows="6" matInput formControlName="Body"></textarea>
-      </mat-form-field>
-
-    </mat-card-content>
-
-    <mat-card-actions align="end">
-      <button mat-button (click)="submit()" [disabled]="contactForm.invalid">
-        Submit
-      </button>
-    </mat-card-actions>
-  </mat-card>
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfvALumRk1NSPpo0zO3oAZD28BoXDoflgkCJRHHf-3YPBXhMA/viewform?embedded=true" width="640" height="824" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 </div>
