task: Add remote data URLs

--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -93,7 +93,7 @@
       <mat-icon>cancel</mat-icon>
       Clear cart
     </button>
-    <button mat-flat-button color="primary" (click)="openSummary()" [disabled]="shippingAddressForm.invalid">
+    <button mat-flat-button color="primary" (click)="openSummary()" [disabled]="shippingAddressForm.invalid" color="accent">
       <mat-icon>payment</mat-icon>
       Proceed to checkout
     </button>
