--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -1,1 +1,15 @@
-<p>checkout works!</p>
+<div *ngIf="invalidError" style="color:red">
+  {{ invalidError }}
+</div>
+
+<stripe-card #stripeCard
+  (paymentMethodChange) = "setPaymentMethod($event)"
+  (tokenChange) = "setStripeToken($event)"
+  (sourceChange) = "setStripeSource($event)">
+</stripe-card>
+
+  <div fxLayout="row space-between">
+    <button type="button" mat-flat-button color="accent">createPaymentMethod</button>
+    <button type="button"  mat-flat-button color="warn" class="btn btn-warning me-1">createSource</button>
+    <button type="button"  mat-flat-button color="primary" class="btn btn-danger me-1">createToken</button>
+  </div>
