fix: Change favicon

--- a/src/app/components/item-details/item-details.component.html
+++ b/src/app/components/item-details/item-details.component.html
@@ -1,1 +1,16 @@
-<p>item-details works!</p>
+<h1 matDialogTitle>
+  {{data.name}}
+</h1>
+<mat-divider></mat-divider>
+<mat-dialog-content>
+
+  <mat-dialog-content>
+    <img src="{{data.image}}">
+    <!--<span>{{data.prices.ngn}}</span>-->
+  </mat-dialog-content>
+  <mat-dialog-actions align="end">
+    <!--<button mat-flat-button color="accent">
+      Buy this item
+    </button>-->
+  </mat-dialog-actions>
+</mat-dialog-content>
