--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -1,5 +1,6 @@
 <div id="parent">
   <mat-card class="mat-elevation-z4">
+    <img src="{{data.image}}" matCardImage (click)="popup(data)">
     <mat-card-header>
       <mat-card-title>
         {{data.name}}
@@ -10,13 +11,12 @@
         <span *ngIf="null">&#163;</span>
       </mat-card-subtitle>
     </mat-card-header>
-    <img src="{{data.image}}" matCardImage>
     <mat-card-actions>
-      <button mat-button (click)="buy()">
+      <button mat-flat-button color="primary" (click)="buy()">
         Buy
       </button>
       <span fxFlex="1 1 auto"></span>
-      <button mat-button (click)="addToCart()">
+      <button mat-flat-button color="accent" (click)="addToCart()">
         <mat-icon>add_shopping_cart</mat-icon>
         Add to cart
       </button>
