task: Add unique page for shop-all

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -30,7 +30,7 @@
   <mat-sidenav-container>
     <mat-sidenav #drawer fxLayout="column" mode="over" >
       <div></div>
-      <button mat-button routerLink="../" (click)="drawer.toggle()">Shop all</button>
+      <button mat-button routerLink="shop-all/" (click)="drawer.toggle()">Shop all</button>
       <button mat-button routerLink="shipping" (click)="drawer.toggle()">Shipping & delivery</button>
       <button mat-button routerLink="about-us" (click)="drawer.toggle()">About Us</button>
       <button mat-button routerLink="contact-us" (click)="drawer.toggle()">Contact Us</button>
